--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/oren picture.jpeg" alt="Oren Profile" style="width:250px;height:250x;"></td>
+      <td><img src="Images/Oren Picture.jpeg" alt="Oren Profile" style="width:250px;height:250x;"></td>
       <td>
         <h1>Oren Bresler</h1>
         <p><em>Producer and manager of <strong><a href="https://www.the420sound.net/">The 4'20' Sound</a></strong></em></p>
