--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
   </table>
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact.me.html">Contact Me</a>
+  <a href="Hobbies.html">My Hobbies</a>
+  <a href="Contact.me.html">Contact Me</a>
 
 </body>
 
